# mptcp

./: README.md  RPi3_TCP2Serial.py  Serial_master  file_join.py  file_split.py  rf24_rec.ino  rf24_xmit.ino  startup.py  t.txt
RF24/: RPi3_TCP2Serial.py  Serial_master  Serial_receiver  rf24_rec.ino  rf24_xmit.ino
images/: RPi3_TCP2Serial_Diagram.drawio
src/: client_send.py  file_join.py  file_split.py  mptcpproject.toml  rf24_scanner.py  setup.cfg  socket.py  startup.py
