[metadata]
name = MPTCP file splitting application
version = 0.0.1
author = Mark Sonstein
author_email = mark.sonstein@gmail.com
description = An application to demonstrate safe transport of data without encryption
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msonstei/mptcp
project_urls =
    Bug Tracker = https://github.com/msonstei/mptcp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
